--- a/homework15/style/style.css
+++ b/homework15/style/style.css
@@ -3,3 +3,11 @@
     height: 65px;
     font-size: 24px;
 }
+
+.button{
+    width: 250px;
+    height: 50px;
+    border: 1px solid gray;
+    border-radius: 8px;
+    
+}
