--- a/homework21/style/style.css
+++ b/homework21/style/style.css
@@ -3,13 +3,15 @@ body{
 }
 
 
-.container{
+.form-container{
     padding: 15px 50px;
-    border-bottom: 2px rgb(44, 28, 28);
+    border-bottom: 2px solid rgb(151, 144, 144);
 }
 
-.option{
+.select{
     border-radius: 6px;
+    width: 150px;
+   
 }
 
 .input{
@@ -24,5 +26,6 @@ body{
     width: 150px;
     border-radius: 6px;
     font-size: 18px;
+    margin-left: 15px;
     
 }
